# scrub

./: .travis.yml  ChangeLog.md  LICENSE  README.md  scrub.cabal  shell.nix
src/: Scrub.hs
src/Scrub/: Class.hs  Newtypes.hs  Types.hs  Wrappers.hs
test/: Test.hs
