name:                scrub
version:             0.1
synopsis:            Scrubs data types of sensitive information such as PII, passwords, etc
description:         Provides a type class Scrub that converts a data type to Text and removes
                     sensitive information in the process.  Useful for error messages, logging, etc.
license:             BSD3
license-file:        LICENSE
author:              Isaac Shapira, Doug Beardsley
maintainer:          fresheyeball@gmail.com, mightybyte@gmail.com
copyright:           Takt Inc
category:            Logging, Security
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10
Tested-With:         GHC == 8.0.2,
                     GHC == 8.4.4,
                     GHC == 8.6.4

library
  exposed-modules:
    Scrub
    Scrub.Class
    Scrub.Newtypes

  hs-source-dirs: src
  ghc-options:         -Wall
  build-depends:
    base >= 4.9   && < 4.13,
    text >= 0.11  && < 1.3,
    time >= 1.6.0 && < 1.9
  default-language:    Haskell2010

test-suite spec
  type: exitcode-stdio-1.0
  hs-source-dirs: src, test
  other-modules:
    Scrub
    Scrub.Class
    Scrub.Newtypes
  build-depends:
    base  >= 4.9 && < 4.13,
    hspec >= 2.4 && < 2.7,
    text,
    time
  main-is: Test.hs
  default-language:    Haskell2010
